# cocoon

./: CMakeLists.txt
.github/workflows/: release.yml
benchmark/: server.go
boost-http/: http-client.cpp  http.cpp
docs/: ra-tls.md
mt-tools/: pyproject.toml
mt-tools/src/mt/cli/: __init__.py  eval.py
mt-tools/src/mt/tasks/: __init__.py
net/: TcpClient.h  TcpClient.hpp  TcpConnection.hpp
reprodebian/: fetch-deps.sh  mkosi.build  mkosi.conf
reprodebian/cocoon-init/: cocoon-cert-refresh.service  cocoon-init-common  cocoon-init-sev  cocoon-init-tdx
runners/: BaseRunner.cpp  BaseRunner.hpp  ClientRunner.cpp  ProxyRunner.cpp  WorkerRunner.cpp
runners/client/: ClientProxyConnection.cpp  ClientRunner.cpp  ClientRunner.hpp  ClientRunningRequest.cpp  ClientRunningRequest.h
runners/helpers/: ValidateRequest.cpp  ValidateRequest.h
runners/key-manager/: KeyManagerRunner.cpp  KeyManagerRunner.hpp
runners/proxy/: ProxyInboundWorkerConnection.cpp  ProxyRunner.cpp  ProxyRunner.hpp  ProxyRunningRequest.cpp
runners/smartcontracts/: RootContractConfig.cpp  RootContractConfig.hpp
runners/worker/: WorkerProxyConnection.cpp  WorkerRunner.cpp  WorkerRunner.h  WorkerRunningRequest.cpp  WorkerRunningRequest.hpp
scripts/: cocoon-launch  extract-image-hash
spec/fake-ton/: fake-ton-config.json
spec/spec-key-manager/: cocoon-router.service  key-manager-config.json
spec/spec-proxy/: cocoon-router.service
spec/spec-worker/: cocoon-router.service  worker-config.json
tee/: CMakeLists.txt
tee/cocoon/: ProxyConfig.cpp  RATLS.cpp  RATLS.h  health-render.cpp  (+4 more)
(+8 files in other folders)
