[project]
name = "mt"
version = "0.1.0"
description = "Machine translation tools"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests",
    "openai-harmony",
    "unbabel-comet",
    "datasets",
    "pandas",
    "rich",
    "duckdb",
    "bert-score",
    # Audio processing
    "speechbrain",
    "soundfile",
    "scipy",
    "torchaudio>=2.4",
    "torch>=2.4",
    "openai-whisper",
    "transformers",
    "accelerate",
]

[project.scripts]
mt = "mt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mt"]

